Fix mixin-button-spinner visibility

--- a/_common.less
+++ b/_common.less
@@ -127,6 +127,10 @@
     max-height: 80%;
     visibility: visible; // Overrides .mixin-invisible-content
     .mixin-absolute-center();
+
+    * {
+      visibility: visible; // Overrides .mixin-invisible-content
+    }
   }
 }
 
